--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
             "jspdf": "*",
             "lucide-react": "^0.487.0",
             "next-themes": "^0.4.6",
+            "pdfjs-dist": "^5.4.449",
             "qr-code-styling": "*",
             "react": "^18.3.1",
             "react-day-picker": "^8.10.1",
