--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
       },
       "devDependencies": {
             "@types/node": "^20.10.0",
+            "@types/pdfjs-dist": "^2.10.377",
             "@vitejs/plugin-react-swc": "^3.10.2",
             "vite": "6.3.5"
       },
